--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "react-tutorial",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://jsonplaceholder.typicode.com",
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.18.1",
     "bootstrap": "^4.3.1",
     "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-moment": "^0.9.2",
-    "react-router-dom": "^5.0.0",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "2.1.8",
     "styled-components": "^4.3.2",
     "uuid": "^3.3.2"
